[tool.poetry]
name = "cfm"
version = "0.1.0"
description = ""
authors = ["Qgeindreau"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
featuretools = "^1.15.0"
jupyterlab = "^3.4.8"
pandas = "^1.5.0"
autokeras = "^1.0.20"
tsai = "^0.3.2"
sktime = "^0.13.4"
fastai = "^2.7.9"
ipywidgets = "^8.0.2"
plotly = "^5.10.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
